<resources>
    <string name="app_name">Foodie</string>
    <string name="default_notification_channel_id">FOODIE_1</string>
    <string name="default_notification_channel_name">Foodie</string>
    <string name="default_notification_description">Default Description</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="foodie">Foodie</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="login_with_google">Login with Google</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="or">or</string>
    <string name="select_profile_photo">Select profile photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="chooseFromGallery">Choose From Gallery</string>
    <string name="takeAPhoto">Take A Photo</string>
    <string name="user_profile_photo">User\'s Profile Photo</string>
    <string name="post_photo_slideshow">Post photo slideshow</string>
    <string name="comments_section">Comments section</string>
    <string name="likes_section">Likes section</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="messages">Messages</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="closer_drawer">Close Navigation Drawer</string>
    <string name="feeds">Feeds</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="sample_friends">271 Friends</string>
    <string name="sample_posts">150 Posts</string>
    <string name="sample_location">San Jose, CA</string>
    <string name="sample_email">user123@gmail.com</string>
    <string name="sample_name">John Smith</string>
    <string name="successSignUp">Successfully signed up.</string>
    <string name="emailPrompt">Enter an email.</string>
    <string name="passwordPrompt">Enter a password.</string>
    <string name="firstNamePrompt">Enter first name.</string>
    <string name="lastNamePrompt">Enter last name.</string>
    <string name="profileEditFailure">Failed to edit profile. Please try again.</string>
    <string name="loadDataFailed">Failed to load data from database.</string>
    <string name="email">Email</string>
    <string name="editSuccessfully">Edited profile successfully.</string>
    <string name="editFailed">Edit profile failed. Please try again later.</string>
    <string name="editProfile">Edit Profile</string>
    <string name="save">Save</string>
    <string name="addPost">Add Post</string>
    <string name="sendMessage">Send Message</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="selectPostPhoto">Select post photo</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="location">Location</string>
    <string name="newPost">New Post</string>
    <string name="add_a_new_comment">Add a new comment</string>
    <string name="delete">Delete</string>
    <string name="comments">Comments</string>
    <string name="edit_post">Edit Post</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="add_friend">Add Friend</string>
    <string name="unfriend">Unfriend</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="cancel">Cancel</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="confirm_password_error_prompt">Confirm password must be the same as new password</string>
    <string name="invalid_email_prompt">Not a valid email address.</string>
    <string name="re_log_in_prompt">Please log out and sign in again to edit email address and/or password.</string>
    <string name="sample_interests">75 Interests</string>
    <string name="sample_post_description">Best taco NA!!</string>
    <string name="sample_post_time">6 min ago</string>
    <string name="sample_post_location">San Jose, CA</string>
    <string name="sample_user_name">Huy Nguyen</string>
    <string name="sample_post_comments">10 Comments</string>
    <string name="post_history">Post History</string>
    <string name="interests">Interests</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="sample_clock_time">10:03pm</string>
    <string name="friends">Friends</string>
    <string name="add_new_message">Add new message</string>
    <string name="send">Send</string>


</resources>
