<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_marginEnd="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginStart="30dp"
    tools:context="com.example.mvp.foodie.SignInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/appLogo_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/foodie"
        android:textColor="@color/colorAccent"
        android:textSize="36sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/facebookLogin_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appLogo_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/facebook_login_button"
        android:text="@string/login_with_facebook"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/googleLogin_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/facebookLogin_id"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/google_login_button"
        android:text="@string/login_with_google"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/createAccountBtn_id"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/usernameBlock_id"
            android:layout_alignParentTop="true">

            <android.support.v7.widget.AppCompatEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/usernameText_id"
                android:hint="@string/username"
                android:drawableLeft="@drawable/account"
                android:drawableStart="@drawable/account"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/passwordBlock_id"
            android:layout_below="@id/usernameBlock_id"
            app:passwordToggleEnabled="true">

            <android.support.v7.widget.AppCompatEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/passwordText_id"
                android:drawableLeft="@drawable/password"
                android:drawableStart="@drawable/password"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn_id"
            android:layout_below="@+id/passwordBlock_id"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_rounded_button"/>

    </RelativeLayout>



    <android.support.v7.widget.AppCompatButton
        android:id="@+id/createAccountBtn_id"
        style="@style/FlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textColor="@color/colorGreenButton" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/forgotPasswordBtn_id"
        style="@style/FlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/colorGreenButton" />



</RelativeLayout>
