<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginStart="30dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.example.mvp.foodie.signup.SignUpActivity">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/profilePhoto_id"
        android:layout_centerHorizontal="true"
        android:src="@drawable/camera"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/select_profile_photo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/profilePhoto_id"
        android:id="@+id/nameBlock_id"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/firstNameBlock_id">

            <android.support.v7.widget.AppCompatEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/firstNameText_id"
                android:hint="@string/first_name"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/lastNameBlock_id">

            <android.support.v7.widget.AppCompatEditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/lastNameText_id"
                android:hint="@string/last_name"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailAddressBlock_id"
        android:layout_below="@+id/nameBlock_id">

        <android.support.v7.widget.AppCompatEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/emailAddressText_id"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordBlock_id"
        app:passwordToggleEnabled="true"
        android:layout_below="@id/emailAddressBlock_id">

        <android.support.v7.widget.AppCompatEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/passwordText_id"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signUpBtn_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/passwordBlock_id"
        android:layout_marginTop="8dp"
        android:background="@drawable/green_rounded_button"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />


</RelativeLayout>
