<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userPhoto_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_gravity="center"
        android:src="@drawable/camera" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/userFullName_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:text="@string/sample_user_name"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:id="@+id/acceptBtn_id"
        android:layout_gravity="center"
        android:text="@string/accept"/>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:id="@+id/declineBtn_id"
        android:text="@string/decline"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/cancelBtn_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:text="@android:string/cancel" />


</LinearLayout>