<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.EditProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:id="@+id/nameBlock_id"
        android:layout_marginTop="30dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/firstNameBlock_id">

            <android.support.v7.widget.AppCompatEditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/firstNameText_id"
                android:hint="@string/first_name"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/lastNameBlock_id">

            <android.support.v7.widget.AppCompatEditText
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:id="@+id/lastNameText_id"
                android:hint="@string/last_name"
                android:inputType="textCapWords" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:id="@+id/emailBlock_id">

        <android.support.v7.widget.AppCompatEditText
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/emailText_id"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/editBtn_id"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/green_rounded_button"
        android:text="@string/edit"
        android:textColor="@android:color/white" />

</LinearLayout>