<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mvp.foodie.profile.ProfileActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profile_toolbar_layout"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:id="@+id/profile_toolbar"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileName_id"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profile_toolbar_layout"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:text="@string/sample_name"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/profilePhoto_id"
        android:layout_below="@id/profileName_id"
        android:src="@drawable/camera" />

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileEmail_id"
        android:layout_centerHorizontal="true"
        android:text="@string/sample_email"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/profilePhoto_id"/>

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/profileLocation_id"
        android:layout_centerHorizontal="true"
        android:text="@string/sample_location"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/profileEmail_id"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:id="@+id/userStatsBlock_id"
        android:layout_below="@+id/profileLocation_id">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profilePostCount_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sample_posts" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/profileFriendCount_id"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sample_friends" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/viewSentFriendRequestBtn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userStatsBlock_id"
        android:text="@string/sent_friend_requests"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/viewPendingFriendRequestBtn_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewSentFriendRequestBtn_id"
        android:text="@string/pending_friend_requests"
        android:textColor="@android:color/white" />

</RelativeLayout>
